--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -11,19 +11,17 @@
 
 .title-section {
   text-align: left;
-  margin-left: 30px; /* Add a bit of margin for visual balance */
+  margin-bottom: 50px;
 }
 
 .title-section h1 {
   font-size: 2.5rem;
   font-weight: bold;
   color: #ff3b57;
-  margin-left: 200px;
 }
 
 .title-section p {
   margin: 8px 0 0;
   font-size: 1.1rem;
   color: #c0c0c0;
-  margin-left: 200px;
 }
