--- a/src/pages/DailyTransactionsPage.css
+++ b/src/pages/DailyTransactionsPage.css
@@ -91,7 +91,6 @@
   font-size: 1rem;
   color: #cccccc;
 }
-
 /* Time Range Selector */
 .time-range-selector {
   display: flex;
@@ -206,7 +205,7 @@
   background-color: #1c1c1c; /* Consistent background color */
   padding: 25px; /* Increased padding to avoid clutter */
   border-radius: 10px;
-  border: 1px solid #333; /* Border for chart containers */
+  border: 1px solid #aaa; /* Lighter grey border for better contrast */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -220,7 +219,7 @@
   text-align: center;
   margin-bottom: 20px; /* Added more space between heading and chart */
 }
-/* Pie Chart Legend */
+
 /* Pie Chart Legend */
 .chart-legend {
   text-align: center;
